# main.go
@@ -2,17 +2,22 @@
 //
 // This is a sample recipes API. You can find out more about the API at https://github.com/PacktPublishing/Building-Distributed-Applications-in-Gin.
 //
-//			Schemes: http
-//	 Host: localhost:8080
-//			BasePath: /
-//			Version: 1.0.0
-//			Contact: Mohamed Labouardy <mohamed@labouardy.com> https://labouardy.com
+//				Schemes: http
+//		 Host: localhost:8080
+//				BasePath: /
+//				Version: 1.0.0
+//				Contact: Mohamed Labouardy <mohamed@labouardy.com> https://labouardy.com
+//	 SecurityDefinitions:
+//	 api_key:
+//	   type: apiKey
+//	   name: Authorization
+//	   in: header
 //
-//			Consumes:
-//			- application/json
+//				Consumes:
+//				- application/json
 //
-//			Produces:
-//			- application/json
+//				Produces:
+//				- application/json
 //
 // swagger:meta
 package main
@@ -117,7 +122,10 @@ func main() {
 		authorized.GET("/recipes/:id", recipeHandler.GetRecipeHandler)
 		authorized.GET("/recipes/search", recipeHandler.SearchRecipeHandler)
 	}
-
-	router.Run()
 	fmt.Println("serving on http://localhost:8080/")
+	fmt.Println("serving on https://localhost:443/")
+	router.Run()
+	//router.RunTLS(":443", "certs/localhost.crt",
+	//	"certs/localhost.key")
+
 }
